[gd_scene load_steps=2 format=3 uid="uid://4tqiqdnl2vcw"]

[ext_resource type="Script" path="res://script/AIRobot.gd" id="1_dd324"]

[node name="AIRobot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dd324")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RobotImage" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MoneyLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="InfoLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Paybutton" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Cancelbutton" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="ChatArea" type="Panel" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatHistory" type="TextEdit" parent="Panel/ChatArea"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="InputField" type="LineEdit" parent="Panel/ChatArea"]
layout_mode = 0
offset_right = 67.0625
offset_bottom = 31.0

[node name="SendButton" type="Button" parent="Panel/ChatArea"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="CloseChatButton" type="Button" parent="Panel/ChatArea"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
